--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,4 +1,7 @@
-^LICENSE\.md$
-^README\.Rmd$
+^.*\.Rproj$         # Designates the directory as an RStudio Project
+^\.Rproj\.user$     # Used by RStudio for temporary files
+^LICENSE\.md$       # Full text of the license
+^README\.Rmd$       # An Rmd file used to generate README.md
+^data-raw$          # Code used to create data included in the package
 ^test_joao$
 ^prep$
