update namespace n description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Imports:
     sf,
     units,
     readr,
-    magrittr
+    magrittr,
+    gtfs2gps
 Suggests: 
     testthat (>= 2.1.0),
     knitr,
