--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gps2emis
 Title: Estimate public transportation emissions from GTFS data
 Version: 0.0.0.9000
-Authors@R: person(given="Joao",family="Bazzo",email="joao.bazzo@gmail.com",role=c("aut","cre"),comment = c(ORCID = "0000-0003-4536-5006"))
+Authors@R: c(person(given="Joao",family="Bazzo",email="joao.bazzo@gmail.com",role=c("aut","cre"),comment = c(ORCID = "0000-0003-4536-5006")),person(given="Rafael H. M.", family="Pereira", email="rafa.pereira.br@gmail.com", role=c("aut"), comment = c(ORCID = "0000-0003-2125-7465")),person(given="Pedro R.", family="Andrade", email="pedro.andrade@inpe.br", role=c("aut"), comment = c(ORCID = "0000-0001-8675-4046")))
 Description: GTFS data from public transportation, combined with fleet characteristics, 
     is used to estimate emissions of vehicles in a high temporal and spatial resolution.
 License: MIT + file LICENSE
