fix global variable ef

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ importFrom(data.table,":=")
 importFrom(data.table,.N)
 importFrom(data.table,.SD)
 importFrom(magrittr,"%>%")
+importFrom(utils,data)
