--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(ef_hdv_scaled)
 export(ef_hdv_speed)
 export(emis)
-export(gps_to_linestring)
+export(gps2line)
 export(gtfs2gps)
 importFrom(data.table,":=")
 importFrom(data.table,.N)
