--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,4 +1,3 @@
-^.*\.Rproj$         # Designates the directory as an RStudio Project
 ^\.Rproj\.user$     # Used by RStudio for temporary files
 ^LICENSE\.md$       # Full text of the license
 ^README\.Rmd$       # An Rmd file used to generate README.md
@@ -11,3 +10,4 @@
 ^tests$
 ^gps2emis.Rproj
 ^data-raw$
+^.*\.Rproj$
