--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
+Depends:
+    R (>= 3.5.0)
 Imports: 
     stringr,
     data.table,
