--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(ef_hdv_speed)
 export(emis)
 export(gps_as_sflinestring)
 importFrom(data.table,":=")
+importFrom(data.table,.GRP)
+importFrom(data.table,.I)
 importFrom(data.table,.N)
 importFrom(data.table,.SD)
 importFrom(magrittr,"%>%")
