include emis_post

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ef_emfac)
 export(ef_hdv_scaled)
 export(ef_hdv_speed)
 export(emis)
+export(emis_post)
 importFrom(data.table,":=")
 importFrom(data.table,.GRP)
 importFrom(data.table,.I)
