Removing comment to avoid notes in check.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,7 +1,7 @@
-^\.Rproj\.user$     # Used by RStudio for temporary files
-^LICENSE\.md$       # Full text of the license
-^README\.Rmd$       # An Rmd file used to generate README.md
-^data-raw$          # Code used to create data included in the package
+^\.Rproj\.user$
+^LICENSE\.md$
+^README\.Rmd$
+^data-raw$
 ^test_joao$
 ^prep$
 ^figures$
