--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,6 @@ importFrom(data.table,.GRP)
 importFrom(data.table,.I)
 importFrom(data.table,.N)
 importFrom(data.table,.SD)
+importFrom(dplyr,select)
 importFrom(magrittr,"%>%")
 importFrom(utils,data)
