--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ export(ef_euro_scaled)
 export(ef_europe)
 export(ef_usa)
 export(emis)
+export(emis_grid)
 export(emis_post)
 importFrom(data.table,"%like%")
 importFrom(data.table,":=")
 importFrom(data.table,.GRP)
 importFrom(data.table,.I)
 importFrom(data.table,.SD)
+importFrom(data.table,setDT)
 importFrom(magrittr,"%>%")
