add fuel correction equation (#22)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ef_usa)
 export(emis)
 export(emis_grid)
 export(emis_post)
+export(fuel_cor)
 importFrom(data.table,"%like%")
 importFrom(data.table,":=")
 importFrom(data.table,.GRP)
