change function names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,10 @@ export(ef_brazil)
 export(ef_euro_scaled)
 export(ef_europe)
 export(ef_usa)
+export(emi_to_dt)
 export(emis)
 export(emis_grid)
-export(emis_post)
+export(emis_summary)
 export(fuel_cor)
 importFrom(data.table,"%like%")
 importFrom(data.table,":=")
