separate emis and gtfs2emis functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(emis)
 export(emis_grid)
 export(emis_summary)
 export(fuel_cor)
+export(gtfs2emis)
 importFrom(data.table,"%like%")
 importFrom(data.table,":=")
 importFrom(data.table,.GRP)
