add ef_moves, update ef_cetesb and ef_emfac

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,13 @@
 export(ef_brazil)
 export(ef_euro_scaled)
 export(ef_europe)
-export(ef_usa)
+export(ef_usa_emfac)
+export(ef_usa_moves)
 export(emi_to_dt)
 export(emis)
 export(emis_grid)
 export(emis_summary)
 export(fuel_cor)
-export(gtfs2emis)
 importFrom(data.table,"%like%")
 importFrom(data.table,":=")
 importFrom(data.table,.GRP)
