--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(emi_to_dt)
 export(emis)
 export(emis_grid)
 export(emis_summary)
+export(emission_model)
 export(fuel_cor)
+export(transport_model)
 importFrom(data.table,"%like%")
 importFrom(data.table,":=")
 importFrom(data.table,.GRP)
