--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Type: Package
 Package: gtfs2emis
 Title: Generating Estimates of Public Transport Emissions from GTFS Data
-Version: 0.0.0.9001
-Date: 2020-08-11
+Version: 0.0.99
+Date: 2022-04-29
 Authors@R: c(person(given = "Rafael H. M.", family = "Pereira", email = "rafa.pereira.br@gmail.com", role=c("aut"), comment = c(ORCID = "0000-0003-2125-7465")),
              person(given = "Joao", family = "Bazzo", email = "joao.bazzo@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4536-5006")),
              person(given = "Pedro R.", family = "Andrade", email = "pedro.andrade@inpe.br", role=c("aut"), comment = c(ORCID = "0000-0001-8675-4046")))
 Description: Generate estimates of public transport emissions at high spatial and 
-             temporal resolution by combining general transit feed specification (GTFS) data with basic information on 
-             fleet characteristics.
+             temporal resolution by combining general transit feed specification (GTFS) 
+             data with basic information on fleet characteristics.
+URL: https://github.com/rafapereirabr/gtfs2emis
+BugReports: https://github.com/rafapereirabr/gtfs2emis
 License: MIT + file LICENSE
 Depends:
     R (>= 3.5)
@@ -26,7 +28,7 @@ Suggests:
     ggplot2,
     rmarkdown,
     vein
-VignetteBuilder: knitr
 Encoding: UTF-8
-LazyData: true
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+VignetteBuilder: knitr
