--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,10 @@ export(ef_emep_europe)
 export(ef_euro_scaled)
 export(ef_usa_emfac)
 export(ef_usa_moves)
-export(emi_to_dt)
 export(emis)
 export(emis_grid)
 export(emis_summary)
+export(emis_to_dt)
 export(emission_model)
 export(fuel_cor)
 export(transport_model)
