--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,24 @@ Type: Package
 Package: gtfs2emis
 Title: Generating Estimates of Public Transport Emissions from GTFS Data
 Version: 0.0.99
-Date: 2022-04-29
-Authors@R: c(person(given = "Rafael H. M.", family = "Pereira", email = "rafa.pereira.br@gmail.com", role=c("aut"), comment = c(ORCID = "0000-0003-2125-7465")),
+Authors@R: c(
              person(given = "Joao", family = "Bazzo", email = "joao.bazzo@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4536-5006")),
-             person(given = "Pedro R.", family = "Andrade", email = "pedro.andrade@inpe.br", role=c("aut"), comment = c(ORCID = "0000-0001-8675-4046")))
-Description: Generate estimates of public transport emissions at high spatial and 
-             temporal resolution by combining general transit feed specification (GTFS) 
-             data with basic information on fleet characteristics.
+             person(given = "Rafael H. M.", family = "Pereira", email = "rafa.pereira.br@gmail.com", role=c("aut"), comment = c(ORCID = "0000-0003-2125-7465")),
+             person(given = "Pedro R.", family = "Andrade", email = "pedro.andrade@inpe.br", role=c("aut"), comment = c(ORCID = "0000-0001-8675-4046"))
+             )
+Description: Estimate the emission levels of public transport networks based on General Transit Feed Specification (GTFS) data. 
+             The package combines two inputs: I) geolocated time tables of public transport services 
+             organized in GTFS format; and II) information on fleet characteristics such as fleet age,
+             technology, fuel, euro stage, speed etc. As it stands, it estimates several pollutants at 
+             high spatial and temporal resolutions. Pollution levels can be calculated for specific transport
+             routes, trips, time of the day or for the transport system as a whole. These outputs can be extracted 
+             in different formats, supporting analysis on how emission levels vary across space, time and by fleet 
+             characteristics.
+Date: 2022-04-29
 URL: https://github.com/rafapereirabr/gtfs2emis
 BugReports: https://github.com/rafapereirabr/gtfs2emis
 License: MIT + file LICENSE
+Encoding: UTF-8
 Depends:
     R (>= 3.5)
 Imports: 
@@ -20,15 +28,15 @@ Imports:
     units,
     magrittr,
     gtfs2gps,
+    furrr,
     gtfstools
 Suggests: 
     testthat (>= 2.1.0),
     knitr,
-    dplyr,
     ggplot2,
     rmarkdown,
     vein
-Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 VignetteBuilder: knitr
+LazyData: true
