--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,12 @@ export(ef_europe_emep)
 export(ef_scaled_euro)
 export(ef_usa_emfac)
 export(ef_usa_moves)
-export(emis)
 export(emis_grid)
 export(emis_summary)
 export(emis_to_dt)
 export(emission_model)
 export(fuel_cor)
+export(multiply_ef)
 export(transport_model)
 importFrom(data.table,"%like%")
 importFrom(data.table,":=")
@@ -18,4 +18,3 @@ importFrom(data.table,.GRP)
 importFrom(data.table,.I)
 importFrom(data.table,.SD)
 importFrom(data.table,setDT)
-importFrom(magrittr,"%>%")
