--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,4 @@ importFrom(data.table,.GRP)
 importFrom(data.table,.I)
 importFrom(data.table,.SD)
 importFrom(data.table,setDT)
+importFrom(methods,is)
