--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -49,6 +49,7 @@ jobs:
         run: |
           pak::local_install_dev_deps(upgrade = TRUE)
           pak::pkg_install("covr")
+          pak::pkg_install("ipeaGIT/gtfs2gps")
         shell: Rscript {0}
 
       - name: Test coverage
