--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Suggests:
     knitr,
     lwgeom,
     rmarkdown,
+    terra,
     testthat (>= 2.1.0),
     vein
 VignetteBuilder: 
@@ -47,4 +48,5 @@ VignetteBuilder:
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+SystemRequirements: GEOS (>= 3.5.0)
 LazyData: true
