--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -66,8 +66,7 @@ jobs:
       - name: Install system dependencies (Windows)
         if: runner.os == 'Windows'
         run: |
-          pak::pkg_install("Rtools")
-          pak::pkg_install("rspatial/terra")
+          pak::pkg_install('terra', lib='https://rspatial.r-universe.dev')
           
       - name: Install system dependencies (MacOS)
         if: runner.os == 'macOS'
