--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -41,8 +41,7 @@ jobs:
       - name: Install system dependencies (Windows)
         if: runner.os == 'Windows'
         run: |
-          pak::pkg_install("Rtools")
-          pak::pkg_install("rspatial/terra")
+          pak::pkg_install('terra', lib='https://rspatial.r-universe.dev')
           
       - name: Install system dependencies
         if: runner.os == 'Linux'
