--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,8 +41,7 @@ Suggests:
     knitr,
     lwgeom,
     rmarkdown,
-    testthat (>= 2.1.0),
-    vein
+    testthat (>= 2.1.0)
 VignetteBuilder: 
     knitr
 Encoding: UTF-8
