keep fuel_correction as internal function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(emis_grid)
 export(emis_summary)
 export(emis_to_dt)
 export(emission_model)
-export(fuel_cor)
+export(fuel_correction)
 export(multiply_ef)
 export(transport_model)
 importFrom(data.table,"%like%")
