--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(emis_grid)
 export(emis_summary)
 export(emis_to_dt)
 export(emission_model)
+export(slope_class_europe_emep)
 export(transport_model)
 importFrom(data.table,"%like%")
 importFrom(data.table,":=")
