--- a/.github/workflows/R-CMD-check-CRAN.yaml
+++ b/.github/workflows/R-CMD-check-CRAN.yaml
@@ -71,9 +71,15 @@ jobs:
       - name: Install dependencies
         run: |
           pak::local_install_dev_deps(upgrade = TRUE)
-          pak::pkg_install("rcmdcheck")
+           install.packages("rcmdcheck", type = "binary")
         shell: Rscript {0}
 
+      - name: Install binary dependencies
+        if: runner.os != 'Linux'
+        run: |
+          remotes::install_deps(dependencies = TRUE, type="binary")
+        shell: Rscript {0}
+        
       - name: Session info
         run: |
           options(width = 100)
