--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -77,10 +77,16 @@ jobs:
       - name: Install dependencies
         run: |
           pak::local_install_dev_deps(upgrade = TRUE)
-          pak::pkg_install("rcmdcheck")
+          install.packages("rcmdcheck", type = "binary")
           pak::pkg_install("ipeaGIT/gtfs2gps")
         shell: Rscript {0}
 
+   - name: Install binary dependencies
+        if: runner.os != 'Linux'
+        run: |
+          remotes::install_deps(dependencies = TRUE, type="binary")
+        shell: Rscript {0}
+        
       - name: Session info
         run: |
           options(width = 100)
