fix expression after ','

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -39,7 +39,7 @@ jobs:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
             
-      - uses: r-lib/actions/setup-pandoc@v1
+      - uses: r-lib/actions/setup-pandoc@v2
 
       - name: Install pak and query dependencies
         run: |
@@ -69,16 +69,16 @@ jobs:
           brew install pkg-config gdal proj geos
           #  Install libgit2
           brew install libgit2
-
-      - name: Install system dependencies (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          install.packages("sf", type = "win.binary")
           
       - name: "[Stage] [macOS] Install system libs for pkgdown"
         if: runner.os == 'macOS' && matrix.config.pkgdown != ''
         run: brew install harfbuzz fribidi
 
+      #- name: Install system dependencies (Windows)
+      #  if: runner.os == 'windows'
+      #  run: |
+      #    install.packages("sf", type = "win.binary")
+          
       - name: Install dependencies
         run: |
           pak::local_install_dev_deps(upgrade = TRUE)
