--- a/.github/workflows/R-CMD-check-CRAN.yaml
+++ b/.github/workflows/R-CMD-check-CRAN.yaml
@@ -68,10 +68,10 @@ jobs:
         if: runner.os == 'macOS' && matrix.config.pkgdown != ''
         run: brew install harfbuzz fribidi
 
-      - name: Install system dependencies (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          install.packages("sf", type = "win.binary")
+     # - name: Install system dependencies (Windows)
+     #   if: runner.os == 'Windows'
+     #   run: |
+     #     install.packages("sf", type = "win.binary")
           
       - name: Install dependencies
         run: |
