remove spaces and uses the package name (gtfs2emis) in single quotes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
 Package: gtfs2emis
-Title: Estimating Public Transport Emissions from GTFS Data
+Title: Estimating Public Transport Emissions from General Transit Feed Specification (GTFS) Data
 Version: 0.1.0
 Authors@R: c(
              person(given = "Joao",
@@ -24,22 +24,8 @@ Authors@R: c(
                 comment = c(ORCID = "0000-0002-3162-1905")),
             person(given = "Ipea - Institute for Applied Economic Research",
                 role = c("cph", "fnd")))
-Description: A bottom up model to estimate the emission levels of public 
-             transport systems based on  General Transit Feed Specification 
-             (GTFS) data. The package requires two main inputs: i) public 
-             transport  data in the GTFS standard format; and ii) some basic 
-             information on fleet characteristics such as fleet age, technology, 
-             fuel and Euro stage. As it stands, the package estimates several 
-             pollutants at high spatial and temporal resolutions. Pollution 
-             levels can be  calculated for specific transport routes, trips, 
-             time of the day or for the transport system as a whole. The output 
-             with emission estimates can be extracted in different formats, 
-             supporting analysis  on how emission levels vary across space, 
-             time and by fleet characteristics.  A full description of the methods 
-             used in the gtfs2emis model is presented in Vieira, J. P. B.; Pereira,
-             R. H. M.; Andrade, P. R. (2022) <doi:10.31219/osf.io/8m2cy>. 
-URL: https://ipeagit.github.io/gtfs2emis/ ,
-     https://github.com/ipeaGIT/gtfs2emis
+Description: A bottom up model to estimate the emission levels of public transport systems based on General Transit Feed Specification (GTFS) data. The package requires two main inputs: i) Public transport data in the GTFS standard format; and ii) Some basic information on fleet characteristics such as fleet age, technology, fuel and Euro stage. As it stands, the package estimates several pollutants at high spatial and temporal resolutions. Pollution levels can be calculated for specific transport routes, trips, time of the day or for the transport system as a whole. The output with emission estimates can be extracted in different formats, supporting analysis on how emission levels vary across space, time and by fleet characteristics. A full description of the methods used in the 'gtfs2emis' model is presented in Vieira, J. P. B.; Pereira, R. H. M.; Andrade, P. R. (2022) <doi:10.31219/osf.io/8m2cy>. 
+URL: https://ipeagit.github.io/gtfs2emis/ , https://github.com/ipeaGIT/gtfs2emis
 BugReports: https://github.com/ipeaGIT/gtfs2emis/issues
 License: MIT + file LICENSE
 Depends:
