create emep_europe wear emissions function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ef_europe_emep)
 export(ef_scaled_euro)
 export(ef_usa_emfac)
 export(ef_usa_moves)
+export(emi_europe_emep_wear)
 export(emis_grid)
 export(emis_summary)
 export(emis_to_dt)
