--- a/.github/workflows/R-CMD-check-CRAN.yaml
+++ b/.github/workflows/R-CMD-check-CRAN.yaml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pak::local_install_dev_deps(upgrade = TRUE)
+          pak::pkg_sysreqs(upgrade = TRUE)
           pak::pkg_install("rcmdcheck")
         shell: Rscript {0}
   
