--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -41,8 +41,8 @@ jobs:
       - name: Install system dependencies
         if: runner.os == 'Linux'
         run: |
-          pak::local_system_requirements(execute = TRUE)
-          pak::pkg_system_requirements("pkgdown", execute = TRUE)
+          pak::pkg_sysreqs(execute = TRUE)
+          pak::pkg_sysreqs("pkgdown", execute = TRUE)
         shell: Rscript {0}
           
       - name: Install dependencies
