--- a/.github/workflows/R-CMD-check-CRAN.yaml
+++ b/.github/workflows/R-CMD-check-CRAN.yaml
@@ -53,8 +53,8 @@ jobs:
       - name: Install system dependencies (Linux)
         if: runner.os == 'Linux'
         run: |
-          pak::local_system_requirements(execute = TRUE)
-          pak::pkg_system_requirements("rcmdcheck", execute = TRUE)
+          pak::pkg_sysreqs(upgrade = TRUE)
+          pak::pkg_sysreqs("rcmdcheck", upgrade = TRUE)
         shell: Rscript {0}
 
       - name: Install system dependencies (MacOS)
