--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -41,8 +41,8 @@ jobs:
       - name: Install system dependencies
         if: runner.os == 'Linux'
         run: |
-          pak::pkg_sysreqs(execute = TRUE)
-          pak::pkg_sysreqs("covr", execute = TRUE)
+          pak::pkg_sysreqs(upgrade = TRUE)
+          pak::pkg_sysreqs("covr", upgrade = TRUE)
         shell: Rscript {0}
 
       - name: Install system dependencies (MacOS)
