--- a/.github/workflows/R-CMD-check-CRAN.yaml
+++ b/.github/workflows/R-CMD-check-CRAN.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Install system dependencies (Linux)
         if: runner.os == 'Linux'
         run: |
-          pak::pkg_sysreqs(upgrade = TRUE)
+          #pak::pkg_sysreqs(upgrade = TRUE)
           pak::pkg_sysreqs("rcmdcheck", upgrade = TRUE)
         shell: Rscript {0}
 
