--- a/.github/workflows/R-CMD-check-CRAN.yaml
+++ b/.github/workflows/R-CMD-check-CRAN.yaml
@@ -53,7 +53,8 @@ jobs:
       - name: Install system dependencies (Linux)
         if: runner.os == 'Linux'
         run: |
-          pak::pkg_sysreqs("rcmdcheck", upgrade = TRUE)
+          pak::local_system_requirements(execute = TRUE)
+          pak::pkg_system_requirements("rcmdcheck", execute = TRUE)
         shell: Rscript {0}
 
       - name: Install system dependencies (MacOS)
@@ -69,7 +70,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pak::pkg_sysreqs(upgrade = TRUE)
+          pak::local_install_dev_deps(upgrade = TRUE)
           pak::pkg_install("rcmdcheck")
         shell: Rscript {0}
   
