Update gtfs2gps version requirement in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,7 @@ Imports:
     data.table,
     furrr,
     future,
-    gtfs2gps,
+    gtfs2gps (>= 2.1-4),
     methods,
     sf (>= 0.9-0),
     sfheaders,
